--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.mikosz.projektkoncowyzapalskimikolaj.MainActivity">
-<LinearLayout
+    <FrameLayout
+        android:layout_weight="1"
+        android:id="@+id/frameLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark"
     android:id="@+id/wybor_efektu">
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/balans"
         android:text="balans"
         android:layout_weight="1"
@@ -20,10 +25,11 @@
         />
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/swiatlo"
         android:text="naswietlenie"
         android:layout_weight="1"
+
 
         />
     <Button
@@ -43,17 +49,14 @@
 
         />
 </LinearLayout>
-    <FrameLayout
-        android:layout_weight="1"
-        android:id="@+id/frameLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="4"
+        android:id="@+id/dolny_pasek"
+        android:layout_alignParentBottom="true"
 
         >
         <Button
@@ -68,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/reset"
-            android:text="res"
+            android:text="resest"
             android:layout_weight="1"
             />
         <Button
@@ -81,4 +84,4 @@
             />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
